--- a/app/css/main.css
+++ b/app/css/main.css
@@ -17,31 +17,114 @@ input {
   outline: none;
   border-top: 0; }
 
+button {
+  padding: 0;
+  border: none; }
+
+/*hero section*/
 .sale {
   background: #ebf7ff; }
   .sale p {
+    padding: 13px 0;
     font-size: 13px;
     color: #666; }
+    .sale p span {
+      padding-left: 13px; }
     .sale p a {
-      color: #3598db; }
+      color: #3598db;
+      text-decoration: underline; }
 
-.selectcity select {
-  padding: 5px 10px;
-  width: 150px;
-  height: 30px; }
-  .selectcity select option {
-    color: #326795; }
-    .selectcity select option:hover {
-      cursor: pointer;
-      color: #3598db; }
+.selectcity {
+  padding: 8px 0;
+  text-align: right; }
+  .selectcity select {
+    padding: 5px 10px;
+    width: 150px;
+    height: 30px; }
+    .selectcity select option {
+      color: #326795; }
+      .selectcity select option:hover {
+        cursor: pointer;
+        color: #3598db; }
 
 .clinic {
   width: 120px;
   height: 30px;
   background: #c5e8ff;
-  color: #326795;
-  border: none; }
+  color: #326795; }
   .clinic a {
     display: block;
     text-decoration: none;
     color: #326795; }
+
+.header .row {
+  margin-top: 20px; }
+
+.logo {
+  position: relative; }
+  .logo p {
+    position: absolute;
+    top: 43px;
+    left: 112px; }
+
+.location address {
+  margin: 0; }
+  .location address img {
+    width: 20px;
+    color: #3598db;
+    vertical-align: top; }
+  .location address p {
+    padding-left: 5px;
+    display: inline-block;
+    line-height: 1.2; }
+
+.location .time {
+  padding-top: 5px; }
+  .location .time img {
+    width: 17px;
+    vertical-align: top; }
+  .location .time p {
+    padding-left: 5px;
+    display: inline-block; }
+  .location .time span {
+    color: #3598db;
+    font-weight: 700; }
+
+.info button {
+  margin-left: 16px;
+  position: relative;
+  display: inline-block;
+  width: 120px;
+  height: 65px;
+  background: #e53828;
+  border: none;
+  text-align: left;
+  opacity: 0.8; }
+  .info button:hover {
+    opacity: 1; }
+  .info button img {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 40px;
+    opacity: 0.2; }
+  .info button a {
+    display: block;
+    padding: 10px 0 10px 20px;
+    text-decoration: none;
+    color: #fff; }
+
+.phone {
+  text-align: right; }
+  .phone p {
+    font-size: 30px;
+    font-weight: 700; }
+  .phone a {
+    color: #93c8ec;
+    text-decoration: none;
+    border-bottom: 1px dashed #93c8ec; }
+  .phone img {
+    position: relative;
+    top: 0;
+    right: 0;
+    height: 20px; }
