--- a/app/sass/_colors.sass
+++ b/app/sass/_colors.sass
@@ -1,8 +1,10 @@
 $body-text: #000
+$menu-text: #fff
 $second-text: #666 //серый
 $active-text: #3598db //синий
 $bg-sale: #ebf7ff //голубой
 $btn-clinic: #c5e8ff //темно-голубой
+$btn-info: #e53828 //оранжевый
 
 
  
