--- a/app/sass/_colors.sass
+++ b/app/sass/_colors.sass
@@ -1,10 +1,14 @@
 $body-text: #000
+$bg-header: #fff
 $menu-text: #fff
 $second-text: #666 //серый
 $active-text: #3598db //синий
 $bg-sale: #ebf7ff //голубой
 $btn-clinic: #c5e8ff //темно-голубой
 $btn-info: #e53828 //оранжевый
+$bg-menu: #133755 //синий
+$bg-sub: #326795 //светло-синий
+$btn: #fc4f3f //красный
 
 
  
