--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -12,7 +12,7 @@ p, h1, h5
 	margin: 0
 
 body
- font-family: 'Proxima Nova', sans-serif
+ font-family: 'Proxima Nova', 'Roboto', sans-serif
  font-size: 15px
  font-weight: 400
  color: $body-text
@@ -25,7 +25,22 @@ button
 	padding: 0 
 	border: none
 
-/*hero section*/
+.btn-more /*кнопка подробнее*/
+	width: 200px
+	//height: 50px
+	border: 2px solid $btn
+	background: transparent
+	a
+		padding: 12px 0
+		color: $btn
+		text-decoration: none
+		display: block
+		font-size: 17px
+  transition: all 0.2s
+
+
+
+/*section sale*/
 
 .sale
 	background: $bg-sale
@@ -50,8 +65,6 @@ button
 	  &:hover
 	  	cursor: pointer
 	  	color: $active-text
-	  a
-
 .clinic
 	width: 120px
 	height: 30px
@@ -62,18 +75,17 @@ button
  	text-decoration: none
   color: #326795
 
+/*header*/
+
 .header
- .row
-  margin-top: 20px
+	background: $bg-header
+	margin: 20px 0
 .logo
-	//padding: 20px 0
 	position: relative
 	p
 		position: absolute
 		top: 43px
 		left: 112px
-		//top: 63px
-		//left: 112px
 .location
  address
  	margin: 0
@@ -120,7 +132,6 @@ button
 			padding: 10px 0 10px 20px
 			text-decoration: none
 			color: $menu-text
-
 .phone
 	text-align: right
 	p
@@ -137,21 +148,117 @@ button
   right: 0
   height: 20px
  
+/*section menu*/
 
+.menu
+	background: $bg-menu
+ font-size: 17px
+ position: relative
+ &-bar
+ 	height: 60px
+ 	align-items: center
+ 	li
+ 		margin-right: 35px
+ 		a
+ 			text-decoration: none
+    color: $menu-text
+    display: block
+   .toggleSubmenu /*label*/
+			  display: none
+     i /*иконка угол вниз*/
+   	  position: absolute
+    		top: 40px
+   			left: 195px
+   			font-size: 18px
+   			color: $menu-text 
 
+.sub /*под меню*/
+	position: absolute
+	top: 60px
+	left: 130px
+	background: $bg-sub
+	width: 220px
+	display: none
+ li
+  
+ 	a
+ 		background: $bg-menu
+ 		font-size: 15px
 
+input:checked ~ .sub
+	display: block			
+ position: relative
+.menu-bar label.toggleSubmenu
+ position: absolute
+ top: 0px
+ left: 0px
+ width: 100%
+ height: 100%
+ cursor: pointer
+ display: block
+input:checked ~ a
+ background: $bg-sub
+ color: $menu-text
+input:hover ~ a
+ background: 
+ color: 
 
+/*section menu*/
 
+.slider
+	background: #f7fbfc url(../img/malysh.png) no-repeat 70% 900%
+	height: 460px
+.bg-services
+	background: rgba(251, 253, 254, 0.6)
+.services
+	padding: 12px 0
+ display: -webkit-flex
+ display: -moz-flex
+ display: -ms-flex
+ display: -o-flex
+ display: flex
+ align-items: center
+ &_move
+ 	margin-left: -45px
+	img
+		height: 40px
+	a
+  padding-left: 20px
+  text-decoration: none
+  color: $body-text
+.title
+	margin: 50px 0
+	h1
+		font-size: 48px
+	 font-weight: 700
+		span
+			color: $active-text
+ &-btn
+ 	margin-top: 35px
+ 	a
+	 	&:hover
+	 		background: $btn
+	 		color: $menu-text
 
-
-
-
-
-
-
-
-
-
+.rectangle /*прямоугольные кнопки*/
+	margin-bottom: 20px
+	input /*радио-кнопки*/
+		display: none
+	&__item
+		margin-right: 10px
+		width: 50px
+	 height: 8px
+ 	cursor: pointer
+ 	background: $menu-text
+#photo1 /*для переключения*/
+	&:checked ~ .label1
+		background: $active-text
+#photo2
+	&:checked ~ .label2
+		background: $active-text
+#photo3
+	&:checked ~ .label3
+		background: $active-text
 
 
 
