section our-service is ready

--- a/app/sass/_colors.sass
+++ b/app/sass/_colors.sass
@@ -9,7 +9,7 @@ $btn-info: #e53828 //оранжевый
 $bg-menu: #133755 //синий
 $bg-sub: #326795 //светло-синий
 $btn: #fc4f3f //красный
-
+$text-title: #fc4f3f //оранжевый
 
  
 
