--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -8,7 +8,7 @@ ul
 	margin: 0
 	list-style: none
 
-p, h1, h5
+p, h1, h2
 	margin: 0
 
 body
@@ -27,17 +27,56 @@ button
 
 .btn-more /*кнопка подробнее*/
 	width: 200px
-	//height: 50px
+	height: 50px
 	border: 2px solid $btn
 	background: transparent
 	a
-		padding: 12px 0
+		display: block
+		height: 100%
 		color: $btn
 		text-decoration: none
-		display: block
+		line-height: 50px
 		font-size: 17px
   transition: all 0.2s
 
+.title /*заголовки секуций*/
+		font-family: 'Helvetica', 'Roboto', sans-serif
+	 font-size: 44px
+	 font-weight: 700
+	 span
+	 	color: $text-title
+
+.services-block /*блок для секции наши услуги*/
+	position: relative
+	width: 250px
+	display: block
+	height: 130px
+	&:hover
+	 box-shadow: 0 0 0 5px $active-text
+	&:before /*треугольник*/
+		content: ""
+		position: absolute
+	 bottom: 0px
+	 left: 0px
+	 border-bottom: 110px solid rgba(55, 77, 102, 0.8) 
+	 border-right: 230px solid transparent
+	&:hover:before
+	 display: block
+	 border-bottom: 110px solid rgba(53, 152, 219, 0.8)
+	&__img
+		height: 130px
+	&__icon
+		width: 40px
+		position: absolute
+		top: 0
+		left: 0
+ &__text
+  position: absolute
+		bottom: 18px
+		left: 15px
+		font-size: 17px
+		font-weight: 700
+		color: $menu-text
 
 
 /*section sale*/
@@ -226,14 +265,14 @@ input:hover ~ a
   padding-left: 20px
   text-decoration: none
   color: $body-text
-.title
+.slider-title
 	margin: 50px 0
 	h1
 		font-size: 48px
 	 font-weight: 700
 		span
 			color: $active-text
- &-btn
+ &__btn
  	margin-top: 35px
  	a
 	 	&:hover
@@ -283,3 +322,113 @@ input:hover ~ a
 			color: $menu-text
   span
   	text-transform: lowercase
+
+/*section our-services*/
+.our-services
+	text-align: center
+	&-title
+		h2
+			padding-top: 60px
+		p
+			padding: 35px 0 20px
+			font-size: 16px
+.eko /*1й блок*/
+	&__img
+		background: url(../img/pregnancy-2.png) no-repeat center
+		background-size: cover
+
+.omc /*2й блок*/
+	&__img
+		background: url(../img/analizy.png) no-repeat 
+		background-size: cover
+
+.programm /*3й блок*/
+	&__img
+		background: url(../img/eko.png) no-repeat 
+		background-size: cover
+
+.surogat /*4й блок*/
+	&__img
+		background: url(../img/surogat.png) no-repeat 
+	 background-size: cover
+
+.second-row, .third-row
+ margin-top: 40px
+
+.donor /*5й блок*/
+	&__img
+		background: url(../img/donor.png) no-repeat 
+	 background-size: cover
+
+.ikci /*6й блок*/
+	&__img
+		background: url(../img/ikci.png) no-repeat 
+	 background-size: cover
+
+.treatment /*7й блок*/
+	&__img
+		background: url(../img/usare.png) no-repeat 
+	 background-size: cover
+
+.uro /*8й блок*/
+	&__img
+		background: url(../img/usare.png) no-repeat 
+	 background-size: cover
+
+.lab /*9й блок*/
+	&__img
+		background: url(../img/vse_tonkost.png) no-repeat 
+	 background-size: cover
+
+.frost /*10й блок*/
+	&__img
+		background: url(../img/frost.jpg) no-repeat 
+	 background-size: cover
+
+.uzi /*11й блок*/
+	&__img
+		background: url(../img/uzi.jpg) no-repeat 
+	 background-size: cover
+
+.ginecology /*12й блок*/
+	&__img
+		background: url(../img/sakit.jpg) no-repeat 
+	 background-size: cover
+
+.services__btn
+	margin: 45px 0 85px
+.btn-show
+	width: 325px
+	height: 50px
+	background: $btn-info
+	position: relative 
+ opacity: 0.8
+ &:hover
+		z-index: 1
+		opacity: 1
+		//border: 2px solid rgba(229, 56, 40, 1)
+ &:after
+		content: ""
+		position: absolute
+		top: 4px
+		left: 4px
+		width: 325px
+		height: 50px
+		//border: 2px solid rgba(229, 56, 40, 0.8)
+		border: 2px solid #fff
+		//background: transparent
+		//z-index: -1
+	
+ a
+ 	font-size: 19px
+ 	color: $menu-text
+ 	text-decoration: none
+ 	display: block
+ 	height: 100%
+ 	line-height: 50px
+	 
+	 
+
+	
+
+ 
