--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4,7 +4,7 @@ ul {
   margin: 0;
   list-style: none; }
 
-p, h1, h5 {
+p, h1, h2 {
   margin: 0; }
 
 body {
@@ -23,17 +23,59 @@ button {
 
 .btn-more {
   width: 200px;
+  height: 50px;
   border: 2px solid #fc4f3f;
   background: transparent; }
   .btn-more a {
-    padding: 12px 0;
+    display: block;
+    height: 100%;
     color: #fc4f3f;
     text-decoration: none;
-    display: block;
+    line-height: 50px;
     font-size: 17px;
     -webkit-transition: all 0.2s;
     -o-transition: all 0.2s;
     transition: all 0.2s; }
+
+.title {
+  font-family: 'Helvetica', 'Roboto', sans-serif;
+  font-size: 44px;
+  font-weight: 700; }
+  .title span {
+    color: #fc4f3f; }
+
+.services-block {
+  position: relative;
+  width: 250px;
+  display: block;
+  height: 130px; }
+  .services-block:hover {
+    -webkit-box-shadow: 0 0 0 5px #3598db;
+            box-shadow: 0 0 0 5px #3598db; }
+  .services-block:before {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    border-bottom: 110px solid rgba(55, 77, 102, 0.8);
+    border-right: 230px solid transparent; }
+  .services-block:hover:before {
+    display: block;
+    border-bottom: 110px solid rgba(53, 152, 219, 0.8); }
+  .services-block__img {
+    height: 130px; }
+  .services-block__icon {
+    width: 40px;
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .services-block__text {
+    position: absolute;
+    bottom: 18px;
+    left: 15px;
+    font-size: 17px;
+    font-weight: 700;
+    color: #fff; }
 
 /*section sale*/
 .sale {
@@ -229,16 +271,16 @@ input:checked ~ a {
     text-decoration: none;
     color: #000; }
 
-.title {
+.slider-title {
   margin: 50px 0; }
-  .title h1 {
+  .slider-title h1 {
     font-size: 48px;
     font-weight: 700; }
-    .title h1 span {
+    .slider-title h1 span {
       color: #3598db; }
-  .title-btn {
+  .slider-title__btn {
     margin-top: 35px; }
-    .title-btn a:hover {
+    .slider-title__btn a:hover {
       background: #fc4f3f;
       color: #fff; }
 
@@ -290,3 +332,103 @@ input:checked ~ a {
       color: #fff; }
     .about__item span {
       text-transform: lowercase; }
+
+/*section our-services*/
+.our-services {
+  text-align: center; }
+  .our-services-title h2 {
+    padding-top: 60px; }
+  .our-services-title p {
+    padding: 35px 0 20px;
+    font-size: 16px; }
+
+.eko__img {
+  background: url(../img/pregnancy-2.png) no-repeat center;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.omc__img {
+  background: url(../img/analizy.png) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.programm__img {
+  background: url(../img/eko.png) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.surogat__img {
+  background: url(../img/surogat.png) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.second-row, .third-row {
+  margin-top: 40px; }
+
+.donor__img {
+  background: url(../img/donor.png) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.ikci__img {
+  background: url(../img/ikci.png) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.treatment__img {
+  background: url(../img/usare.png) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.uro__img {
+  background: url(../img/usare.png) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.lab__img {
+  background: url(../img/vse_tonkost.png) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.frost__img {
+  background: url(../img/frost.jpg) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.uzi__img {
+  background: url(../img/uzi.jpg) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.ginecology__img {
+  background: url(../img/sakit.jpg) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.services__btn {
+  margin: 45px 0 85px; }
+
+.btn-show {
+  width: 325px;
+  height: 50px;
+  background: #e53828;
+  position: relative;
+  opacity: 0.8; }
+  .btn-show:hover {
+    z-index: 1;
+    opacity: 1; }
+  .btn-show:after {
+    content: "";
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    width: 325px;
+    height: 50px;
+    border: 2px solid #fff; }
+  .btn-show a {
+    font-size: 19px;
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    height: 100%;
+    line-height: 50px; }
