--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,56 @@
+@charset "UTF-8";
+@font-face {
+  font-family: 'fontello';
+  src: url("../fonts/fontello/fontello.eot?2289753");
+  src: url("../fonts/fontello/fontello.eot?2289753#iefix") format("embedded-opentype"), url("../fonts/fontello/fontello.woff2?2289753") format("woff2"), url("../fonts/fontello/fontello.woff?2289753") format("woff"), url("../fonts/fontello/fontello.ttf?2289753") format("truetype"), url("../fonts/fontello/fontello.svg?2289753#fontello") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.svg?2289753#fontello') format('svg');
+  }
+}
+*/
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */ }
+
+.icon-angle-up:before {
+  content: '\f106'; }
+
+/* '' */
+.icon-angle-down:before {
+  content: '\f107'; }
+
+/* '' */
 /*Specification*/
 ul {
   padding: 0;
@@ -79,29 +132,47 @@ button {
 
 /*section sale*/
 .sale {
-  background: #ebf7ff; }
+  background: #ebf7ff;
+  height: 45px; }
   .sale p {
-    padding: 13px 0;
     font-size: 13px;
-    color: #666; }
+    color: #666;
+    line-height: 45px; }
     .sale p span {
       padding-left: 13px; }
     .sale p a {
       color: #3598db;
       text-decoration: underline; }
 
-.selectcity {
-  padding: 8px 0;
-  text-align: right; }
-  .selectcity select {
-    padding: 5px 10px;
-    width: 150px;
-    height: 30px; }
-    .selectcity select option {
-      color: #326795; }
-      .selectcity select option:hover {
-        cursor: pointer;
+.select-city {
+  padding: 7px 0; }
+  .select-city select {
+    padding: 3px 10px;
+    width: 180px;
+    height: 30px;
+    border: 1px solid rgba(197, 232, 255, 0.8);
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    color: #326795;
+    cursor: pointer; }
+    .select-city select:focus {
+      outline: none;
+      color: #326795;
+      border: 1px solid rgba(197, 232, 255, 0.8);
+      cursor: pointer; }
+    .select-city select option {
+      color: #000; }
+      .select-city select option:focus {
         color: #3598db; }
+
+.select-icon {
+  position: absolute;
+  top: 8px;
+  right: 116px;
+  color: #326795;
+  font-size: 20px;
+  pointer-events: none; }
 
 .clinic {
   width: 120px;
@@ -192,54 +263,58 @@ button {
   background: #133755;
   font-size: 17px;
   position: relative; }
-  .menu-bar {
-    height: 60px;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
-    .menu-bar li {
-      margin-right: 35px; }
-      .menu-bar li a {
-        text-decoration: none;
-        color: #fff;
+
+.menu-bar {
+  height: 60px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .menu-bar > li {
+    margin-right: 35px; }
+    .menu-bar > li > a {
+      text-decoration: none;
+      color: #fff;
+      display: block; }
+    .menu-bar > li > input {
+      display: none;
+      position: relative; }
+      .menu-bar > li > input:checked ~ .sub {
         display: block; }
-      .menu-bar li .toggleSubmenu {
-        display: none; }
-        .menu-bar li .toggleSubmenu i {
-          position: absolute;
-          top: 40px;
-          left: 195px;
-          font-size: 18px;
-          color: #fff; }
+    .menu-bar > li > label {
+      margin: 0;
+      display: block;
+      color: #fff;
+      cursor: pointer; }
+
+.services-icon {
+  position: absolute;
+  top: 35px;
+  left: 190px;
+  font-size: 18px;
+  color: #fff; }
 
 .sub {
+  display: none;
+  width: 220px;
   position: absolute;
   top: 60px;
   left: 130px;
   background: #326795;
-  width: 220px;
-  display: none; }
-  .sub li a {
-    background: #133755;
+  z-index: 1; }
+  .sub li:first-child {
+    padding-top: 11px; }
+  .sub li:last-child {
+    padding-bottom: 11px; }
+  .sub li > a {
+    display: block;
+    padding: 4px 0 4px 15px;
+    position: relative;
+    text-decoration: none;
+    color: #fff;
     font-size: 15px; }
-
-input:checked ~ .sub {
-  display: block;
-  position: relative; }
-
-.menu-bar label.toggleSubmenu {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  display: block; }
-
-input:checked ~ a {
-  background: #326795;
-  color: #fff; }
+    .sub li > a:hover {
+      background: #133755; }
 
 /*section slider*/
 .slider {
