--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'fontello';
-  src: url("../fonts/fontello/fontello.eot?2289753");
-  src: url("../fonts/fontello/fontello.eot?2289753#iefix") format("embedded-opentype"), url("../fonts/fontello/fontello.woff2?2289753") format("woff2"), url("../fonts/fontello/fontello.woff?2289753") format("woff"), url("../fonts/fontello/fontello.ttf?2289753") format("truetype"), url("../fonts/fontello/fontello.svg?2289753#fontello") format("svg");
+  src: url("../fonts/fontello/fontello.eot?67709601");
+  src: url("../fonts/fontello/fontello.eot?67709601#iefix") format("embedded-opentype"), url("../fonts/fontello/fontello.woff2?67709601") format("woff2"), url("../fonts/fontello/fontello.woff?67709601") format("woff"), url("../fonts/fontello/fontello.ttf?67709601") format("truetype"), url("../fonts/fontello/fontello.svg?67709601#fontello") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -12,7 +12,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?2289753#fontello') format('svg');
+    src: url('../font/fontello.svg?67709601#fontello') format('svg');
   }
 }
 */
@@ -43,6 +43,18 @@
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */ }
 
+.icon-search:before {
+  content: '\e800'; }
+
+/* '' */
+.icon-cancel:before {
+  content: '\e801'; }
+
+/* '' */
+.icon-cancel-1:before {
+  content: '\e802'; }
+
+/* '' */
 .icon-angle-up:before {
   content: '\f106'; }
 
@@ -68,7 +80,7 @@ body {
 
 input {
   outline: none;
-  border-top: 0; }
+  border: none; }
 
 button {
   padding: 0;
@@ -271,7 +283,9 @@ button {
       -ms-flex-align: center;
           align-items: center; }
   .menu-bar > li {
-    margin-right: 35px; }
+    margin-right: 30px; }
+    .menu-bar > li:nth-child(10) {
+      margin-right: 39px; }
     .menu-bar > li > a {
       text-decoration: none;
       color: #fff;
@@ -315,6 +329,60 @@ button {
     font-size: 15px; }
     .sub li > a:hover {
       background: #133755; }
+
+.search-button {
+  width: 60px;
+  height: 60px;
+  background: #326795;
+  cursor: pointer; }
+  .search-button i {
+    color: #fff; }
+
+.sb {
+  position: absolute;
+  right: 15px;
+  top: 64px;
+  display: none;
+  z-index: 1; }
+  .sb-input {
+    position: absolute;
+    top: 0px;
+    left: -300px;
+    width: 300px;
+    background: #326795;
+    padding-left: 20px;
+    height: 60px;
+    font-size: 14px;
+    color: #fff; }
+    .sb-input::-webkit-input-placeholder {
+      color: #fff; }
+    .sb-input::-moz-placeholder {
+      color: #fff; }
+    .sb-input:-ms-input-placeholder {
+      color: #fff; }
+    .sb-input::-ms-input-placeholder {
+      color: #fff; }
+    .sb-input::placeholder {
+      color: #fff; }
+  .sb-search {
+    width: 60px;
+    height: 60px;
+    background: #326795;
+    cursor: pointer; }
+    .sb-search i {
+      color: #fff; }
+  .sb-cancel {
+    position: absolute;
+    top: -64px;
+    width: 60px;
+    height: 60px;
+    background: #326795;
+    cursor: pointer; }
+    .sb-cancel i {
+      color: #fff; }
+
+.sb_opened {
+  display: block; }
 
 /*section slider*/
 .slider {
