--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -217,7 +217,7 @@ button
  &>li
   //margin-right: 35px
   margin-right: 30px
-  &:nth-child(10)
+  &:nth-child(10) /*пункт контакты в меню*/
   	margin-right: 39px
   &>a
 		 text-decoration: none
@@ -233,12 +233,18 @@ button
   	display: block
   	color: $menu-text
   	cursor: pointer
-.services-icon /*иконка угол вниз*/
+.services-icon /*иконка вниз*/
 	position: absolute
 	top: 35px
-	left: 190px
+	left: 182px
 	font-size: 18px
 	color: $menu-text 
+	&_up /*иконка вверх*/
+		top: -26px
+	 left: 52px
+	 width: 20px
+	 height: 20px
+	 z-index: 5
 
 .sub /*под меню*/
 	display: none
@@ -249,7 +255,7 @@ button
 	background: $bg-sub
 	z-index: 1
  li
- 	&:first-child /*верхний отступ*/
+ 	&:nth-child(2) /*верхний отступ*/
  		padding-top: 11px
  	&:last-child /*нижний отступ*/
  		padding-bottom: 11px
@@ -278,7 +284,7 @@ button
 	top: 64px
 	display: none
 	z-index: 1
- &-input
+ &-input /*поле ввода*/
  	position: absolute
  	top: 0px
  	left: -300px
@@ -290,14 +296,14 @@ button
  	color: $menu-text
  	&::placeholder
  		color: $menu-text
-	&-search
+	&-search /*кнопка поиска*/
 	 width: 60px
 	 height: 60px
 	 background: $bg-sub
 	 cursor: pointer
 	 i
 	  color: $menu-text
-	&-cancel
+	&-cancel /*кнопка закрытия*/
 	 position: absolute
 	 top: -64px
 	 width: 60px
@@ -310,7 +316,8 @@ button
 .sb_opened /*класс для открытия формы поиска*/
  display: block 
  //opacity: 1	
-
+.icon_close /*класс для скрытия иконки вниз*/
+	display: none
 
 
 /*section slider*/
