--- a/app/css/main.css
+++ b/app/css/main.css
@@ -110,9 +110,9 @@ button {
     color: #fc4f3f; }
 
 .services-block {
+  display: block;
   position: relative;
   width: 250px;
-  display: block;
   height: 130px; }
   .services-block:hover {
     -webkit-box-shadow: 0 0 0 5px #3598db;
@@ -134,6 +134,9 @@ button {
     position: absolute;
     top: 0;
     left: 0; }
+    .services-block__icon_size {
+      width: 35px;
+      padding-left: 10px; }
   .services-block__text {
     position: absolute;
     bottom: 18px;
@@ -141,6 +144,22 @@ button {
     font-size: 17px;
     font-weight: 700;
     color: #fff; }
+
+.tv-block {
+  display: block;
+  position: relative;
+  width: 250px;
+  height: 130px; }
+  .tv-block:hover {
+    -webkit-box-shadow: 0 0 0 5px #3598db;
+            box-shadow: 0 0 0 5px #3598db; }
+  .tv-block__img {
+    height: 130px; }
+  .tv-block__icon {
+    width: 60px;
+    position: absolute;
+    top: 38px;
+    left: 92px; }
 
 /*section sale*/
 .sale {
@@ -394,12 +413,8 @@ button {
   display: none; }
 
 /*section slider*/
-.slider {
-  background: #f7fbfc url(../img/malysh.png) no-repeat 70% 100%;
-  height: 460px; }
-
 .bg-services {
-  background: rgba(251, 253, 254, 0.6); }
+  background: #ebf7ff; }
 
 .services {
   padding: 12px 0;
@@ -422,39 +437,6 @@ button {
     padding-left: 20px;
     text-decoration: none;
     color: #000; }
-
-.slider-title {
-  margin: 50px 0; }
-  .slider-title h1 {
-    font-size: 48px;
-    font-weight: 700; }
-    .slider-title h1 span {
-      color: #3598db; }
-  .slider-title__btn {
-    margin-top: 35px; }
-    .slider-title__btn a:hover {
-      background: #fc4f3f;
-      color: #fff; }
-
-.rectangle {
-  margin-bottom: 20px; }
-  .rectangle input {
-    display: none; }
-  .rectangle__item {
-    margin-right: 10px;
-    width: 50px;
-    height: 8px;
-    cursor: pointer;
-    background: #fff; }
-
-#photo1:checked ~ .label1 {
-  background: #3598db; }
-
-#photo2:checked ~ .label2 {
-  background: #3598db; }
-
-#photo3:checked ~ .label3 {
-  background: #3598db; }
 
 /*section about*/
 .about {
@@ -486,13 +468,14 @@ button {
       text-transform: lowercase; }
 
 /*section our-services*/
-.our-services {
+.our-services-title {
   text-align: center; }
   .our-services-title h2 {
     padding-top: 60px; }
   .our-services-title p {
     padding: 35px 0 20px;
-    font-size: 16px; }
+    font-size: 16px;
+    text-align: left; }
 
 .eko__img {
   background: url(../img/pregnancy-2.png) no-repeat center;
@@ -514,7 +497,7 @@ button {
   -webkit-background-size: cover;
           background-size: cover; }
 
-.second-row, .third-row {
+.second-row, .third-row, .fourth-row {
   margin-top: 40px; }
 
 .donor__img {
@@ -557,30 +540,79 @@ button {
   -webkit-background-size: cover;
           background-size: cover; }
 
-.services__btn {
-  margin: 45px 0 85px; }
+.besplodiya__img {
+  background: url(../img/besplodiya.jpg) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
 
-.btn-show {
-  width: 325px;
-  height: 50px;
-  background: #e53828;
+.insemination__img {
+  background: url(../img/insemination.jpg) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.oplodotvoreniye__img {
+  background: url(../img/oplodotvoreniye.jpg) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.sperma {
+  margin-bottom: 100px; }
+  .sperma__img {
+    background: url(../img/sperma.jpg) no-repeat;
+    -webkit-background-size: cover;
+            background-size: cover; }
+
+/*section banner*/
+.banner {
+  padding-top: 100px;
+  -webkit-box-shadow: 0px 2px 10px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 0px 2px 10px 0 rgba(0, 0, 0, 0.4); }
+  .banner-img {
+    margin-bottom: 50px;
+    background: url(../img/banner.jpg) no-repeat 0% 25%;
+    height: 250px; }
+  .banner-content {
+    padding-top: 20px; }
+    .banner-content__text {
+      padding-left: 20px;
+      background: #3598db;
+      color: #fff;
+      width: 40%; }
+    .banner-content__tel {
+      padding-left: 20px; }
+      .banner-content__tel .start {
+        font-size: 20px; }
+      .banner-content__tel .end {
+        color: #3598db;
+        font-size: 20px; }
+    .banner-content small {
+      padding-left: 20px; }
+
+.love {
+  margin-right: 20px; }
+  .love__img {
+    background: url(../img/love.jpg) no-repeat;
+    -webkit-background-size: cover;
+            background-size: cover; }
+
+.zamershaja__img {
+  background: url(../img/zamershaja.jpg) no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover; }
+
+.oocit {
+  display: block;
   position: relative;
-  opacity: 0.8; }
-  .btn-show:hover {
-    z-index: 1;
-    opacity: 1; }
-  .btn-show:after {
-    content: "";
+  width: 250px;
+  height: 200px;
+  -webkit-box-shadow: 1px 1px 1px 1px #000;
+          box-shadow: 1px 1px 1px 1px #000; }
+  .oocit__icon {
+    width: 80px;
     position: absolute;
-    top: 4px;
-    left: 4px;
-    width: 325px;
-    height: 50px;
-    border: 2px solid #fff; }
-  .btn-show a {
-    font-size: 19px;
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    height: 100%;
-    line-height: 50px; }
+    top: 60px;
+    left: 80px; }
+  .oocit__text {
+    position: absolute;
+    bottom: 25px;
+    left: 45px; }
