--- a/app/sass/fontello.scss
+++ b/app/sass/fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello/fontello.eot?67709601');
-  src: url('../fonts/fontello/fontello.eot?67709601#iefix') format('embedded-opentype'),
-       url('../fonts/fontello/fontello.woff2?67709601') format('woff2'),
-       url('../fonts/fontello/fontello.woff?67709601') format('woff'),
-       url('../fonts/fontello/fontello.ttf?67709601') format('truetype'),
-       url('../fonts/fontello/fontello.svg?67709601#fontello') format('svg');
+  src: url('../fonts/fontello/fontello.eot?26142671');
+  src: url('../fonts/fontello/fontello.eot?26142671#iefix') format('embedded-opentype'),
+       url('../fonts/fontello/fontello.woff2?26142671') format('woff2'),
+       url('../fonts/fontello/fontello.woff?26142671') format('woff'),
+       url('../fonts/fontello/fontello.ttf?26142671') format('truetype'),
+       url('../fonts/fontello/fontello.svg?26142671#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?67709601#fontello') format('svg');
+    src: url('../font/fontello.svg?26142671#fontello') format('svg');
   }
 }
 */
@@ -58,5 +58,6 @@
 .icon-search:before { content: '\e800'; } /* '' */
 .icon-cancel:before { content: '\e801'; } /* '' */
 .icon-cancel-1:before { content: '\e802'; } /* '' */
+.icon-angle-right:before { content: '\f105'; } /* '' */
 .icon-angle-up:before { content: '\f106'; } /* '' */
 .icon-angle-down:before { content: '\f107'; } /* '' */
